# mmdb-writer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: basic.rs  serde_structs.rs
src/: data_section.rs  error.rs  lib.rs  load.rs  metadata.rs  net.rs  options.rs  pool.rs  record_size.rs  reserved.rs  ser.rs  tree.rs  value.rs  writer.rs
src/value/: serde_impls.rs
tests/: aliases.rs  edge_cases.rs  large_pointers.rs  load.rs  merge_and_ranges.rs  network_enumeration.rs  ordering.rs  prop_roundtrip.proptest-regressions  prop_roundtrip.rs  record_size_selection.rs  reserved_and_options.rs  roundtrip.rs  serde_insert.rs  stress.rs
tests/common/: mod.rs
